--- a/views/index.pug
+++ b/views/index.pug
@@ -3,46 +3,31 @@ extends default
 block content
     .page-content
         h1 World Population
-        p A fully-responsive CSS-only header for your websites and other web applications.
-        h2 Technology
+        h1
+        p This website provides information about worl population.
+        h2 How it works:
         p
-            | This header is built with absolutely no JavaScript dependency. It uses CSS flexbox and grid for positioning
-            | (sorry older browsers!), and works on the smallest mobiles around.
+            | There are four main sections: countries, cities, capitals and people.
+            | The data is displayed in tables with filters and sorting options.
+            | By default, the population colum is sorted from highest to lowest.
+            | All columns can be sorted.
+            | The dropdowns offer a filter option, the filters are dynamic and dependant on each other, filtering by continent will make country dropdown showing only countries in that continent, and the same with other filter drowpdowns.
         p
-            strong Please note:
-            |  The menu uses a checkbox to open and close. You may need to add a handler to
-            |             ensure the checkbox is closed after a link is selected, if using React, or a similar library.
-        h1 Random Content Follows
+            | Below a brief description of the main sections in this website.
+        h2 Countries:
         p
-            | Below are some chunks of lorem ipsum to fill the space. Feel free to ignore them.
-        h2 Countries Report
+            | This is sextion provides information about countries populationsome.
+            | The table can be filtered with dropdown menus to proivde information about countries population by continent and region.
+        h2 Cities:
         p
-            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
-            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
-            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
-            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
-            | Consequat dolor veniam consequat voluptate non ad laboris.
-        h2 Cities report
+            | As with previous section, this one provide cities population information.
+            | Filters are continent, country, region and district.
+        h2 Capitals:
         p
-            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
-            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
-            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
-            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
-            | Consequat dolor veniam consequat voluptate non ad laboris.
-        h2 Capitals Report
+            | This section is similar to previous one.
+        h2 People:
         p
-            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
-            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
-            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
-            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
-            | Consequat dolor veniam consequat voluptate non ad laboris.
-        h2 People Report
-        p
-            | This is some page content. Ad minim non pariatur eiusmod adipisicing magna incididunt qui cupidatat. In Lorem
-            | ullamco exercitation in laborum magna. Aliqua cillum do pariatur dolor adipisicing ea enim. Deserunt nisi
-            | voluptate amet veniam aute ad duis cillum laborum occaecat nisi. Veniam occaecat eiusmod eu eu excepteur
-            | nostrud consectetur velit Lorem incididunt consectetur in dolore. Non fugiat deserunt exercitation ullamco.
-            | Consequat dolor veniam consequat voluptate non ad laboris.
+            | This section provides information about population living in cites and out of cities.
         p
             |
         footer
