--- a/views/countries.pug
+++ b/views/countries.pug
@@ -1,16 +1,11 @@
 extends default 
 
 block content
-  head#fixed
+  head
     
   // Custom syle
   style.
-    div.container {
-          width: 90%;
-      }
-    table.display{
-      margin-left: 10px;
-    }
+     div.container { max-width: 1200px }
     
   div.container
     table#countries.display.nowrap(style='width:100%')
@@ -82,20 +77,32 @@ block content
     var table = $('#countries').DataTable({
       // Default sort
       "order": [[ 4, "desc" ]],
-    rowReorder: {selector: 'td:nth-child(2)'},
-    responsive: true,
+      // Responsive
+      rowReorder: {
+              selector: 'td:nth-child(1)'
+          },
+          responsive: true,
+    // Buttons
     dom: 'lBfrtip',
-        buttons: ['copy', 'excel', 'csv','pdf', 'print'],
+        buttons: [
+            'copy',
+            'excel',
+            'csv',
+            'pdf'
+        ],
+    // Paging 
     "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
-    fixedHeader: {
-            header: true,
-            headerOffset: $('#fixed').height()
-        },
+    // Fixed headers
+    fixedHeader:{
+      header: true,
+      headerOffset: $('#fixed').height()
+    },
     orderCellsTop: true,
     columnDefs: [
     {
+    // Non-searchable columns
     searchable: false,
-    targets: []
+    targets: [0, 4]
     }
     ],
     initComplete: function() {
