--- a/views/default.pug
+++ b/views/default.pug
@@ -36,6 +36,9 @@ head
   script(src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.js")
   // PDF button
   script(src="https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.js")
+  script(src='https://cdn.datatables.net/buttons/1.5.1/js/buttons.colVis.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/pdfmake.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.32/vfs_fonts.js')
 
 header#fixed
   .container
