--- a/views/cities.pug
+++ b/views/cities.pug
@@ -3,11 +3,13 @@ extends default
 block content
   head
     
-  // Custom syle
+  // Custom style
   style.
-     div.container { max-width: 1200px }
-    
+    div.container { max-width: 1200px }
+    label { margin-right: 2em }
   div.container
+    label Number of rows show:
+    input#length.length
     table#cities.display.nowrap(style='width:100%')
       thead
         tr
@@ -73,16 +75,18 @@ block content
       "order": [[ 3, "desc" ]],
       // Responsive
       rowReorder: {
-              selector: 'td:nth-child(1)'
+              selector: 'td:nth-child(0)'
           },
           responsive: true,
     // Buttons
     dom: 'lBfrtip',
         buttons: [
-            'copy',
-            'excel',
-            'csv',
-            'pdf'
+            {extend: 'copy', exportOptions: {columns: ':visible'}},
+            {extend: 'excel', title: 'Cities Population', exportOptions: {columns: ':visible'}},
+            {extend: 'csv', title: 'Citiess Population', exportOptions: {columns: ':visible'}},
+            {extend: 'pdf', title: 'Citiess Population', exportOptions: {columns: ':visible'}}, 
+            {extend: 'print', title: 'Cities Population', exportOptions: {columns: ':visible'}},
+            'colvis'
         ],
     // Paging 
     "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
@@ -103,4 +107,9 @@ block content
     createDropdowns(this.api());
     }
     });
+    // Custom row lenght
+    $('#length').on('input', function() {
+    table.page.len($(this).val()).draw();
+    });
+    
     });
