--- a/views/default.pug
+++ b/views/default.pug
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 head
   include script
   meta(charset='UTF-8')
@@ -60,4 +61,6 @@ header#fixed
             a.nav-link(href='/capitals') Capitals
           li
             a.nav-link(href='/people') People
+          li
+            a.nav-link(href='/language') Languages
 block content
