--- a/views/index.pug
+++ b/views/index.pug
@@ -24,13 +24,17 @@ block content
             | Filters are continent, country, region and district.
         h2 Capitals:
         p
-            | This section is similar to previous one.
+            | This section provides population data of capital cities.
+            | It can be filtered by Country, District and Capital name.
         h2 People:
         p
-            | This section provides information about population living in cites and out of cities.
+            | This section provides information about population living in cites and population not living in cities.
+        p 
+            | The report is based on the datafile, the City Table does not include all cities in the world, so this report will not be 100% accurate.
         p
             |
         footer
-        | github repo:
+        p
+            | For more information on how this application was built, please visit the Github repo:
         p
             a(href='https://github.com/Elvis-Jagger-Abdul-Jabbar/The_Last_Chance') github.com/thelastchance
